# NutriMind

./: .gitignore  README.md  docker-compose.yaml  langgraph.json  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yaml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
agent/: agent.py  app.py  db.py  state.py  test_tools.py  tools.py
agent/nutrition_kb/: chroma.sqlite3
data/Macronutrients/: calcium_hp.txt  folate_hp.txt  iron_hp.txt  magnesium_hp.txt  potassium_hp.txt  vitamin_A_hp.txt  vitamin_B12_hp.txt  vitamin_C_hp.txt  vitamin_D_hp.txt  zinc_hp.txt
data/National_Institutes_Of_Health (FAQ)/: FAQ.txt
faiss_store/: faiss.index  metadata.pkl
nutrition_kb/: chroma.sqlite3
rag/: data_loader.py  embeddings.py  vector_store.py
tests/: test_tools.py
