[project]
name = "nutrimine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ipython>=9.14.1",
    "langchain>=1.3.11",
    "langchain-aws>=1.6.0",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "mcp>=1.28.0",
    "psycopg>=3.3.4",
]
