[project]
name = "nutrimine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.1",
    "ipython>=9.14.1",
    "langchain>=1.3.11",
    "langchain-aws>=1.6.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "mcp>=1.28.0",
    "npm>=0.1.1",
    "psycopg>=3.3.4",
    "pypdf>=6.14.2",
    "requests>=2.32.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.40.0",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.4.30",
]
ui = [
    "streamlit>=1.40.0",
    "requests>=2.32.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.30",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "streamlit>=1.40.0",
    "requests>=2.32.0",
]
